force-app/main/default/objects/Budget_Summary__c/Budget_Summary__c.object-meta.xml
<CustomObject>
    <label>Budget Summary</label>
    <nameField>
        <displayFormat>B -{00000}</displayFormat>
        <label>Budget Summary</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>