force-app/main/default/objects/Budget_Summary__c/fields/Base_Budget_Direct__c.field-meta.xml
<CustomField>
    <fullName>Base_Budget_Direct__c</fullName>
    <label>Base Budget Direct</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>