force-app/main/default/objects/Budget_Summary__c/fields/Base_Budget_Indirect__c.field-meta.xml
<CustomField>
    <fullName>Base_Budget_Indirect__c</fullName>
    <label>Base Budget Indirect</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>