force-app/main/default/objects/Budget_Summary__c/fields/Base_Quota_Direct__c.field-meta.xml
<CustomField>
    <fullName>Base_Quota_Direct__c</fullName>
    <label>Base Quota - Direct</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>