force-app/main/default/objects/Budget_Summary__c/fields/Budget_CY__c.field-meta.xml
<CustomField>
    <fullName>Budget_CY__c</fullName>
    <formula>YEAR(Month__c ) = YEAR(TODAY())</formula>
    <label>Budget CY?</label>
    <type>Checkbox</type>
</CustomField>