force-app/main/default/objects/Budget_Summary__c/fields/Budget_Summary_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Budget_Summary_ID_18__c</fullName>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Summary ID (18)</label>
    <type>Text</type>
</CustomField>