force-app/main/default/objects/Budget_Summary__c/fields/Budget_Summary_Key__c.field-meta.xml
<CustomField>
    <fullName>Budget_Summary_Key__c</fullName>
    <externalId>true</externalId>
    <label>Budget Summary Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>