force-app/main/default/objects/Budget_Summary__c/fields/CAM_Budget_Amount__c.field-meta.xml
<CustomField>
    <fullName>CAM_Budget_Amount__c</fullName>
    <label>CAM Budget Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>