force-app/main/default/objects/Budget_Summary__c/fields/Employee_Number__c.field-meta.xml
<CustomField>
    <fullName>Employee_Number__c</fullName>
    <label>Employee Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>