force-app/main/default/objects/Budget_Summary__c/fields/Owner_s_Manager__c.field-meta.xml
<CustomField>
    <fullName>Owner_s_Manager__c</fullName>
    <formula>Owner:User.Manager_Name__c</formula>
    <label>Owner&apos;s Manager</label>
    <type>Text</type>
</CustomField>