force-app/main/default/objects/Budget_Summary__c/fields/Product_line_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_line_Id__c</fullName>
    <label>Product line Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>