force-app/main/default/objects/Budget_Summary__c/fields/Total_Direct_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Direct_Amount__c</fullName>
    <label>Total Direct Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>