force-app/main/default/objects/Budget_Summary__c/fields/X2017_Actual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>X2017_Actual_Revenue__c</fullName>
    <description>2017 Actual Revenue</description>
    <label>2017 Actual Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>