force-app/main/default/objects/Budget_Summary__c/fields/X2018_Actual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>X2018_Actual_Revenue__c</fullName>
    <label>2018 Actual Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>