force-app/main/default/objects/Budget_Summary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Line_of_Business__c</columns>
    <columns>Month__c</columns>
    <columns>Amount__c</columns>
    <columns>X2017_Actual_Revenue__c</columns>
    <columns>X2018_Actual_Revenue__c</columns>
    <columns>Base_Amount__c</columns>
    <columns>Base_Budget_Direct__c</columns>
    <columns>Base_Budget_Indirect__c</columns>
    <columns>Base_Quota_Direct__c</columns>
    <columns>Base_Quota_Indirect__c</columns>
    <columns>CAM_Budget_Amount__c</columns>
    <columns>Type__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>