force-app/main/default/objects/Budget_Summary__c/listViews/lookup.listView-meta.xml
<ListView>
    <fullName>lookup</fullName>
    <columns>NAME</columns>
    <columns>Line_of_Business__c</columns>
    <columns>Month__c</columns>
    <columns>Total_Direct_Amount__c</columns>
    <columns>Amount__c</columns>
    <columns>Base_Amount__c</columns>
    <columns>Base_Budget_Direct__c</columns>
    <columns>Base_Budget_Indirect__c</columns>
    <columns>Base_Quota_Direct__c</columns>
    <columns>Base_Quota_Indirect__c</columns>
    <columns>CAM_Budget_Amount__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Type__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>contains</operation>
        <value>pap</value>
    </filters>
    <label>lookup</label>
    <language>en_US</language>
</ListView>